There are 4 chagnes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div>My Project</div>
         <div>Secondary line</div>
+        <div>third line</div>
         
         <script src="" async defer></script>
     </body>
