--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Contact</li>
+
+            </ul>       
+        </nav>
 
         <div>My Project</div>
         <div>Secondary line</div>
