should only be on the branch

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div>Secondary line</div>
         <div>third line</div>
         <div>fourth line</div>
+        <div>I should be on the branch only</div>
         
         <script src="" async defer></script>
     </body>
